--- a/pom.xml
+++ b/pom.xml
@@ -127,10 +127,9 @@
             <scope>provided</scope>
         </dependency>
         <dependency>
-            <groupId>org.spigotmc</groupId>
-            <artifactId>spigot</artifactId>
-            <version>1.8.8-R0.1-SNAPSHOT</version>
-            <scope>provided</scope>
+            <groupId>org.bukkit</groupId>
+            <artifactId>craftbukkit</artifactId>
+            <version>1.16.3-R0.1-SNAPSHOT</version>
         </dependency>
         <dependency>
             <!-- on Maven Central -->
